--- a/app/src/main/res/layout/calcultor_activity.xml
+++ b/app/src/main/res/layout/calcultor_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_zhishu"
+        android:id="@+id/button_exp"
         app:layout_widthPercent="20%"
         app:layout_heightPercent="12.5%"
         android:layout_alignParentBottom="true"
@@ -20,7 +20,7 @@
         app:layout_widthPercent="20%"
         app:layout_heightPercent="12.5%"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/button_zhishu"
+        android:layout_toEndOf="@+id/button_exp"
         android:background="#3399CC"
         android:text="." />
 
@@ -57,7 +57,7 @@
         android:id="@+id/button_lg"
         app:layout_widthPercent="20%"
         app:layout_heightPercent="12.5%"
-        android:layout_above="@+id/button_zhishu"
+        android:layout_above="@+id/button_exp"
         android:background="#3399CC"
         android:layout_alignParentStart="true"
         android:textAllCaps="false"
@@ -202,7 +202,7 @@
         android:text="sin" />
 
     <Button
-        android:id="@+id/button_kaifang"
+        android:id="@+id/button_rad"
         app:layout_widthPercent="20%"
         app:layout_heightPercent="12.5%"
         android:layout_above="@+id/button_cos"
@@ -212,11 +212,11 @@
         android:text="√￣" />
 
     <Button
-        android:id="@+id/button_jiecheng"
+        android:id="@+id/button_fac"
         app:layout_widthPercent="20%"
         app:layout_heightPercent="12.5%"
         android:layout_above="@+id/button_two"
-        android:layout_toEndOf="@+id/button_kaifang"
+        android:layout_toEndOf="@+id/button_rad"
         android:background="#3399CC"
         android:textAllCaps="false"
         android:text="!" />
